crates/cli/tests/snapshots/single_use_let__fix_fd0805aa6a2a3f40ceff34d8183ca57afed188cf438eaf69940e32919b80716b.snap
---
source: crates/cli/tests/single_use_let.rs
assertion_line: 7
expression: "\"let\\n  a = 1;\\n  b = 2;\\nin\\n  a + b\\n\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,6 +1,2 @@
-let
-  a = 1;
-  b = 2;
-in
-  a + b
+(1) + (2)
