crates/cli/tests/snapshots/single_use_let__lint_005d426038808a913c1803920cbd55a876a173f171710f6910fbac295de221c9.snap
---
source: crates/cli/tests/single_use_let.rs
assertion_line: 7
expression: "\"let\\n  attrs = { a = 1; };\\nin\\n  { inherit (attrs) a; }\\n\""
---
[30] Warning: Let binding used only once; consider inlining
   ╭─[<temp_file_path>:2:3]
   │
 2 │   attrs = { a = 1; };
   │   ──┬──  
   │     ╰──── attrs is only used once; consider inlining
   │ 
 4 │   { inherit (attrs) a; }
   │              ──┬──  
   │                ╰──── attrs is only used once; consider inlining
───╯
