crates/cli/tests/snapshots/single_use_let__lint_16fcae00b3728ffdca705d62df3389d525317f444834c8139f7d187fbe2e4a99.snap
---
source: crates/cli/tests/single_use_let.rs
assertion_line: 7
expression: "\"let\\n  loop = loop;\\nin\\n  1\\n\""
---
[30] Warning: Let binding used only once; consider inlining
   ╭─[<temp_file_path>:2:3]
   │
 2 │   loop = loop;
   │   ──┬─  
   │     ╰─── loop is never used
───╯
[03] Warning: Assignment instead of inherit
   ╭─[<temp_file_path>:2:3]
   │
 2 │   loop = loop;
   │   ──────┬─────  
   │         ╰─────── This assignment is better written with inherit
───╯
