crates/cli/tests/snapshots/single_use_let__lint_4ae352d4982a1a405b95a1e349025134b6cf22be9b004609202e0d31ef65fa52.snap
---
source: crates/cli/tests/single_use_let.rs
assertion_line: 7
expression: "\"let\\n  base = pkgs.hello;\\n  wrapped = base.override { };\\nin\\n  wrapped\\n\""
---
[30] Warning: Let binding used only once; consider inlining
   ╭─[<temp_file_path>:2:3]
   │
 2 │   base = pkgs.hello;
   │   ──┬─  
   │     ╰─── base is only used once; consider inlining
 3 │   wrapped = base.override { };
   │   ───┬───   ──┬─  
   │      ╰──────────── wrapped is only used once; consider inlining
   │               │   
   │               ╰─── base is only used once; consider inlining
───╯
