crates/cli/tests/snapshots/single_use_let__lint_54c4d170d8a4e6fa8380f6ba6079efaf4ec746bcfdf8f30fe392cd9d534c82c7.snap
---
source: crates/cli/tests/single_use_let.rs
assertion_line: 7
expression: "\"let\\n  x = someExpr;\\nin\\n  \\\"value: ${x}\\\"\\n\""
---
[30] Warning: Let binding used only once; consider inlining
   ╭─[<temp_file_path>:2:3]
   │
 2 │   x = someExpr;
   │   ┬  
   │   ╰── x is only used once; consider inlining
   │ 
 4 │   "value: ${x}"
   │           ──┬─  
   │             ╰─── x is only used once; consider inlining
───╯
