crates/cli/tests/snapshots/single_use_let__lint_a022d9e9c0dbcc1d8b0783e7e5892a1ab7ee38502d452574d74b2e8101c414ce.snap
---
source: crates/cli/tests/single_use_let.rs
assertion_line: 7
expression: "\"let\\n  gpuArgs =\\n    optionals (disableFeatures != []) [\\n      \\\"--disable-features=${concatStringsSep \\\",\\\" disableFeatures}\\\"\\n    ]\\n    ++ optionals (!smoothScroll) [\\n      \\\"--disable-smooth-scrolling\\\"\\n    ];\\nin\\n  concatStringsSep \\\" \\\" (gpuArgs ++ extraArgs)\\n\""
---
[30] Warning: Let binding used only once; consider inlining
    ╭─[<temp_file_path>:2:3]
    │
  2 │   gpuArgs =
    │   ───┬───  
    │      ╰───── gpuArgs is only used once; consider inlining
    │ 
 10 │   concatStringsSep " " (gpuArgs ++ extraArgs)
    │                         ───┬───  
    │                            ╰───── gpuArgs is only used once; consider inlining
────╯
