crates/cli/tests/snapshots/single_use_let__lint_d5a615826b6764d9338ae9c0e029bd90514224099c7f8a0daa6d1c513ef2548e.snap
---
source: crates/cli/tests/single_use_let.rs
assertion_line: 7
expression: "\"let\\n  x = 1;\\nin\\n  null\\n\""
---
[30] Warning: Let binding used only once; consider inlining
   ╭─[<temp_file_path>:2:3]
   │
 2 │   x = 1;
   │   ┬  
   │   ╰── x is never used
───╯
