crates/cli/tests/snapshots/single_use_let__lint_f4080a80fdd4a6851339271c533b8d35fae8d72c5f1a55837b4bf87662661829.snap
---
source: crates/cli/tests/single_use_let.rs
assertion_line: 7
expression: "\"let\\n  x = pkgs.hello;\\nin\\n  x.meta.description\\n\""
---
[30] Warning: Let binding used only once; consider inlining
   ╭─[<temp_file_path>:2:3]
   │
 2 │   x = pkgs.hello;
   │   ┬  
   │   ╰── x is only used once; consider inlining
   │ 
 4 │   x.meta.description
   │   ┬  
   │   ╰── x is only used once; consider inlining
───╯
