crates/cli/tests/snapshots/single_use_let__lint_f5d3f866086eaa7b1e4faa30c84b66b4f8a6613afe8b211c9532c3a63c2ead81.snap
---
source: crates/cli/tests/single_use_let.rs
assertion_line: 7
expression: "\"let\\n  x = 1;\\nin\\n  { inherit x; }\\n\""
---
[30] Warning: Let binding used only once; consider inlining
   ╭─[<temp_file_path>:2:3]
   │
 2 │   x = 1;
   │   ┬  
   │   ╰── x is only used once; consider inlining
   │ 
 4 │   { inherit x; }
   │     ─────┬────  
   │          ╰────── x is only used once; consider inlining
───╯
